--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include day_night_split/plugin *
-recursive-include day_night_split/manual *
+recursive-include tracardi_day_night_split/plugin *
+recursive-include tracardi_day_night_split/manual *
